# battlesnakes

./: Dockerfile  battlesnakes.http  example_move.json  http-client.env.json  main.py  models.py  move.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yaml
src/: evaluate.py  main.py  models.py  move.py  test_move.py
test/: conftest.py  test_all_moves.py  test_game_state_2.py  test_is_head_neighbor.py  test_move.py  test_move_api.py  test_will_win_head_to_head.py
