[tool.poetry]
name = "battlesnakes"
version = "0.1.0"
description = ""
authors = ["Code-Apprentice <codeguru42@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
networkx = "^3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
types-networkx = "^3.2.1.20240703"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
