[project]
name = "battlesnakes"
version = "0.1.0"
description = ""
authors = [{ name = "Code-Apprentice", email = "codeguru42@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "networkx>=3.3,<4",
]

[dependency-groups]
dev = [
    "black>=23.9.1,<24",
    "mypy>=1.5.1,<2",
    "pre-commit>=3.4.0,<4",
    "pytest>=7.4.2,<8",
    "types-networkx>=3.2.1.20240703,<4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
